# InsperAI26.1

./: .gitignore  404.html  CLAUDE.md  Makefile  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
aula-01/: gerar_graficos_aula00.py
aula-01/aprofundamento/: index.html
aula-01/atividades/: index.html
aula-01/estatistica/: index.html
aula-01/historia/: index.html
aula-01/introducao/: index.html
aula-01/python_numpy/: index.html
aula-02/: index.html
aula-02/atividades/: index.html
aula-02/complementar/: index.html
aula-02/exploracao/: index.html
aula-02/outliers/: index.html
aula-02/resumo/: index.html
aula-02/teoria/: index.html
aula-02/treinamento/: index.html
handout/: dev_server.py  mkdocs.yml  requirements.txt
handout/docs/: index.md
handout/docs/aula-00/: aprofundamento.md  atividades.md  estatistica.md  gerar_graficos_aula00.py  historia.md  introducao.md  python_numpy.md
handout/docs/aula-01/: atividades.md  aula01.ipynb  complementar.md  exploracao og.md  exploracao.md  gerar_graficos_aula01.py  gerar_graficos_latitude.py  index.md  outliers og.md  outliers.md  pratica.md  resumo.md  teoria.md  treinamento.md
handout/docs/aula-02/: classificacao.md  complementar.md  index.md  (+6 more)
handout/translations/: mkdocs_quiz.pt-BR.po
search/: search_index.json
setup/ge_pacotes/: index.html
setup/git/: index.html
setup/github/: index.html
setup/setup/: index.html
setup/vscode/: index.html
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: index.mdx
(+53 files in other folders)
