[project]
name = "aulas-iai-2026-1"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocs-quiz>=1.6.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
